# Klovered-free

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  _concurrency.mjs  _stress.mjs  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  render.yaml  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: activity.py  config.py  cron_auth.py  main.py  mistral.py  rate_limit.py  supabase_rest.py
backend/app/pipeline/: agents.py  answer_library.py  chunk.py  docx_export.py  embeddings.py  export_render.py  ingest.py  jobs.py  parse.py  rag.py  retrieval.py
backend/app/routers/: answers.py  cron.py  documents.py  exports.py  jobs.py  knowledge.py
backend/tests/: conftest.py  test_agents.py  test_answer_library.py  test_answers_router.py  test_chunk.py  test_cron_router.py  test_documents_router.py  test_docx_export.py  test_embeddings.py  test_export_render.py  test_exports_router.py  test_ingest.py  test_isolation.py  test_jobs.py  test_jobs_router.py  test_knowledge_router.py  test_mistral.py  test_parse.py  test_rag.py  test_retrieval.py  test_supabase_rest.py
components/: AnswersList.tsx  AuthButton.tsx  AuthModal.tsx  CitationChips.tsx  FeedbackCard.tsx  InviteButton.tsx  KnowledgeView.tsx  OnboardingOverlay.tsx  PublicShell.tsx  RfpUpload.tsx  StatusBadge.tsx  StepNav.tsx  ui.tsx
lib/: agents.ts  answer-library.ts  api.ts  chunk.ts  docx-export.ts  (+12 more)
(+32 files in other folders)
