[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klovered-free-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "mammoth>=1.8",
    "python-multipart>=0.0.12",
    "reportlab>=4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "respx>=0.21"]

# Explicit package list so editable install doesn't try to discover `tests`
# as a package (flat layout auto-discovery would error on multiple top dirs).
[tool.setuptools]
packages = ["app", "app.routers", "app.pipeline"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
